[cleanup] Launch OpenRewrite Guava recipe
This commit is the result of the migration [1] without manual changes
and has errors.
The Maven command line used is: mvn -U
org.openrewrite.maven:rewrite-maven-plugin:run
-Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE
-Drewrite.activeRecipes=org.openrewrite.java.migrate.guava.NoGuava
-Drewrite.exportDatatables=true -Dmaven.repo.local=./.repositoryMaven -f
packaging/org.eclipse.sirius.parent/pom.xml

https://docs.openrewrite.org/recipes/java/migrate/guava/noguava